fixing padding on mobile so all books visible

--- a/static/css/boredom.css
+++ b/static/css/boredom.css
@@ -92,6 +92,7 @@
     gap: 7vw;
     box-sizing: border-box;
     margin-left: 470vw;
+    padding-right: 10vw;
     justify-content: flex-start;
 }
 
